# snippets

./: .gitignore  snippets.md
awk/: code0.txt
c++/: CMakeLists.txt  abs_vs_std_abs.cpp  adl.cpp  aggregate_init_pod_classes.cpp  array_inside_struct.cpp  basic_stream_string_constructor.cpp  binary_search.cpp  bind_needs_ref.cpp  boolalpha.cpp  bound_function_pointer.cpp  c-style_cast.cpp  cmath.cpp  comparator_inside_class.cpp  construction.cpp  cores_num.cpp  creating_threads.cpp  enum_category.cpp  exc_data.cpp  id_and_struct_id.cpp  init.cpp  instr_functions.c  int.luxoft_WorldQuant.cpp  int_conversions.cpp  intrusive_ptr.cpp  linux_sockets.cpp  local_type_as_template_argument.cpp  name_hiding.cpp  namespaces.cpp  new_delete.cpp  operators_inside_class.cpp  private_inheritance.cpp  rvalue_deleted.cpp  scheduled_call.cpp  semicolon.cpp  shared_ptr.cpp  static_methods.cpp  std_move.cpp  stl_hash_map.cpp  struct_necessary.cpp  templated_class.cpp  (+5 more)
excel/: snippets.xlsx
python/: qt.py  small.py  telegram.bio.py  upload_file.py
shell/: arg_expansion.sh  gdb_attach_to_started.sh  relative.sh
