cmake_minimum_required(VERSION 3.16.3)

project(code_snippets)
# set(CMAKE_CXX_STANDARD 98)        # TODO rm

add_executable(abs_vs_std_abs abs_vs_std_abs.cpp)
add_executable(adl adl.cpp)
add_executable(aggregate_init_pod_classes aggregate_init_pod_classes.cpp)
add_executable(array_inside_struct array_inside_struct.cpp)
add_executable(basic_stream_string_constructor basic_stream_string_constructor.cpp)
add_executable(bind_needs_ref bind_needs_ref bind_needs_ref bind_needs_ref.cpp)
add_executable(boolalpha boolalpha.cpp)
add_executable(cmath cmath.cpp)
add_executable(comparator_inside_class comparator_inside_class.cpp)
add_executable(creating_threads creating_threads.cpp)
add_executable(enum_category enum_category.cpp)
add_executable(id_and_struct_id id_and_struct_id.cpp)
add_executable(init init.cpp)
add_executable(int_conversions int_conversions.cpp)
add_executable(intrusive_ptr intrusive_ptr.cpp)
add_executable(linux_sockets linux_sockets.cpp)
add_executable(local_type_as_template_argument local_type_as_template_argument.cpp)
add_executable(name_hiding name_hiding.cpp)
add_executable(namespaces namespaces.cpp)
add_executable(new_delete new_delete.cpp)
add_executable(operators_inside_class operators_inside_class.cpp)
add_executable(private_inheritance private_inheritance.cpp)
add_executable(scheduled_call scheduled_call.cpp)
add_executable(semicolon semicolon.cpp)
add_executable(static_methods static_methods.cpp)
add_executable(templated_class templated_class.cpp instr_functions.c)
add_executable(temporary_not_bind_to_nonconst_ref temporary_not_bind_to_nonconst_ref.cpp)
add_executable(typeid typeid.cpp)
add_executable(typename_dep_scope typename_dep_scope.cpp)
add_executable(cores_num cores_num.cpp)

add_executable(std_move std_move.cpp)
set_property(TARGET std_move PROPERTY CXX_STANDARD 14)

add_executable(binary_search binary_search.cpp instr_functions.c)
set_property(TARGET binary_search PROPERTY CXX_STANDARD 17)
set_source_files_properties(binary_search.cpp PROPERTIES COMPILE_FLAGS -finstrument-functions)

add_executable(c-style_cast c-style_cast.cpp)
add_executable(bound_function_pointer bound_function_pointer.cpp)

add_executable(shared_ptr shared_ptr.cpp instr_functions.c)
set_property(TARGET shared_ptr PROPERTY CXX_STANDARD 11)
set_source_files_properties(shared_ptr.cpp PROPERTIES COMPILE_FLAGS -finstrument-functions)

# find_package(Boost REQUIRED COMPONENTS log)
# add_executable(exc_data exc_data.cpp)
# target_link_libraries(exc_data Boost::log)
# set_property(TARGET exc_data PROPERTY CXX_STANDARD 20)
